@@ -41,13 +41,16 @@ import edu.wpi.first.networktables.NetworkTable;
 import edu.wpi.first.networktables.NetworkTableInstance;
 import edu.wpi.first.networktables.PubSubOption;
 import edu.wpi.first.networktables.StringSubscriber;
+import edu.wpi.first.wpilibj.Alert;
+import edu.wpi.first.wpilibj.Alert.AlertType;
 import edu.wpi.first.wpilibj.DriverStation;
 import edu.wpi.first.wpilibj.Timer;
+import edu.wpi.first.wpilibj.util.WPILibVersion;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import org.opencv.core.Core;
 import org.photonvision.common.hardware.VisionLEDMode;
 import org.photonvision.common.networktables.PacketSubscriber;
 import org.photonvision.targeting.PhotonPipelineResult;
@@ -55,8 +58,9 @@ import org.photonvision.timesync.TimeSyncSingleton;
 
 /** Represents a camera that is connected to PhotonVision. */
 public class PhotonCamera implements AutoCloseable {
-    private static int InstanceCount = 0;
+    private static int InstanceCount = 1;
     public static final String kTableName = "photonvision";
+    private static final String PHOTON_ALERT_GROUP = "PhotonAlerts";
 
     private final NetworkTable cameraTable;
     PacketSubscriber<PhotonPipelineResult> resultSubscriber;
@@ -66,7 +70,7 @@ public class PhotonCamera implements AutoCloseable {
     IntegerEntry inputSaveImgEntry, outputSaveImgEntry;
     IntegerPublisher pipelineIndexRequest, ledModeRequest;
     IntegerSubscriber pipelineIndexState, ledModeState;
-    IntegerSubscriber heartbeatEntry;
+    IntegerSubscriber heartbeatSubscriber;
     DoubleArraySubscriber cameraIntrinsicsSubscriber;
     DoubleArraySubscriber cameraDistortionSubscriber;
     MultiSubscriber topicNameSubscriber;
@@ -104,6 +108,9 @@ public class PhotonCamera implements AutoCloseable {
     double prevTimeSyncWarnTime = 0;
     private static final double WARN_DEBOUNCE_SEC = 5;
 
+    private final Alert disconnectAlert;
+    private final Alert timesyncAlert;
+
     public static void setVersionCheckEnabled(boolean enabled) {
         VERSION_CHECK_ENABLED = enabled;
     }
@@ -118,6 +125,10 @@ public class PhotonCamera implements AutoCloseable {
      */
     public PhotonCamera(NetworkTableInstance instance, String cameraName) {
         name = cameraName;
+        disconnectAlert =
+                new Alert(
+                        PHOTON_ALERT_GROUP, "PhotonCamera '" + name + "' is disconnected.", AlertType.kWarning);
+        timesyncAlert = new Alert(PHOTON_ALERT_GROUP, "", AlertType.kWarning);
         rootPhotonTable = instance.getTable(kTableName);
         this.cameraTable = rootPhotonTable.getSubTable(cameraName);
         path = cameraTable.getPath();
@@ -126,7 +137,7 @@ public class PhotonCamera implements AutoCloseable {
                         .getRawTopic("rawBytes")
                         .subscribe(
                                 PhotonPipelineResult.photonStruct.getTypeString(),
-                                new byte[] {},
+                                new byte[0],
                                 PubSubOption.periodic(0.01),
                                 PubSubOption.sendAll(true),
                                 PubSubOption.pollStorage(20));
@@ -137,7 +148,7 @@ public class PhotonCamera implements AutoCloseable {
         outputSaveImgEntry = cameraTable.getIntegerTopic("outputSaveImgCmd").getEntry(0);
         pipelineIndexRequest = cameraTable.getIntegerTopic("pipelineIndexRequest").publish();
         pipelineIndexState = cameraTable.getIntegerTopic("pipelineIndexState").subscribe(0);
-        heartbeatEntry = cameraTable.getIntegerTopic("heartbeat").subscribe(-1);
+        heartbeatSubscriber = cameraTable.getIntegerTopic("heartbeat").subscribe(-1);
         cameraIntrinsicsSubscriber =
                 cameraTable.getDoubleArrayTopic("cameraIntrinsics").subscribe(null);
         cameraDistortionSubscriber =
@@ -157,6 +168,102 @@ public class PhotonCamera implements AutoCloseable {
 
         // HACK - start a TimeSyncServer, if we haven't yet.
         TimeSyncSingleton.load();
+
+        // HACK - check if things are compatible
+        verifyDependencies();
+    }
+
+    public static void verifyDependencies() {
+        // spotless:off
+        if (!WPILibVersion.Version.equals(PhotonVersion.wpilibTargetVersion)) {
+            String bfw = """
+
+
+
+
+                    >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\s
+                    >>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\s
+                    >>>                                          \s
+                    >>> You are running an incompatible version  \s
+                    >>> of PhotonVision !                        \s
+                    >>>                                          \s
+                    >>> PhotonLib """
+                    + PhotonVersion.versionString
+                    + " is built for WPILib "
+                    + PhotonVersion.wpilibTargetVersion
+                    + "\n"
+                    + ">>> but you are using WPILib "
+                    + WPILibVersion.Version
+                    + """
+                    \n>>>                                          \s
+                    >>> This is neither tested nor supported.    \s
+                    >>> You MUST update WPILib, PhotonLib, or both.
+                    >>> Check `./gradlew dependencies` and ensure\s
+                    >>> all mentions of OpenCV match the version \s
+                    >>> that PhotonLib was built for. If you find a
+                    >>> a mismatched version in a dependency, you\s
+                    >>> must take steps to update the version of \s
+                    >>> OpenCV used in that dependency. If you do\s
+                    >>> not control that dependency and an updated\s
+                    >>> version is not available, contact the    \s
+                    >>> developers of that dependency.           \s
+                    >>>                                          \s
+                    >>> Your code will now crash.                \s
+                    >>> We hope your day gets better.            \s
+                    >>>                                          \s
+                    >>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\s
+                    >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\s
+                    """;
+
+            DriverStation.reportWarning(bfw, false);
+            DriverStation.reportError(bfw, false);
+            throw new UnsupportedOperationException(bfw);
+        }
+        if (!Core.VERSION.equals(PhotonVersion.opencvTargetVersion)) {
+            String bfw = """
+
+
+
+
+                    >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\s
+                    >>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\s
+                    >>>                                          \s
+                    >>> You are running an incompatible version  \s
+                    >>> of PhotonVision !                        \s
+                    >>>                                          \s
+                    >>> PhotonLib """
+                    + PhotonVersion.versionString
+                    + " is built for OpenCV "
+                    + PhotonVersion.opencvTargetVersion
+                    + "\n"
+                    + ">>> but you are using OpenCV "
+                    + Core.VERSION
+                    + """
+                    \n>>>                                          \s
+                    >>> This is neither tested nor supported.    \s
+                    >>> You MUST update WPILib, PhotonLib, or both.
+                    >>> Check `./gradlew dependencies` and ensure\s
+                    >>> all mentions of OpenCV match the version \s
+                    >>> that PhotonLib was built for. If you find a
+                    >>> a mismatched version in a dependency, you\s
+                    >>> must take steps to update the version of \s
+                    >>> OpenCV used in that dependency. If you do\s
+                    >>> not control that dependency and an updated\s
+                    >>> version is not available, contact the    \s
+                    >>> developers of that dependency.           \s
+                    >>>                                          \s
+                    >>> Your code will now crash.                \s
+                    >>> We hope your day gets better.            \s
+                    >>>                                          \s
+                    >>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\s
+                    >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\s
+                    """;
+            // spotless:on
+
+            DriverStation.reportWarning(bfw, false);
+            DriverStation.reportError(bfw, false);
+            throw new UnsupportedOperationException(bfw);
+        }
     }
 
     /**
@@ -177,6 +284,7 @@ public class PhotonCamera implements AutoCloseable {
      */
     public List<PhotonPipelineResult> getAllUnreadResults() {
         verifyVersion();
+        updateDisconnectAlert();
 
         List<PhotonPipelineResult> ret = new ArrayList<>();
 
@@ -202,6 +310,7 @@ public class PhotonCamera implements AutoCloseable {
     @Deprecated(since = "2024", forRemoval = true)
     public PhotonPipelineResult getLatestResult() {
         verifyVersion();
+        updateDisconnectAlert();
 
         // Grab the latest result. We don't care about the timestamp from NT - the metadata header has
         // this, latency compensated by the Time Sync Client
@@ -216,22 +325,34 @@ public class PhotonCamera implements AutoCloseable {
         return result;
     }
 
+    private void updateDisconnectAlert() {
+        disconnectAlert.set(!isConnected());
+    }
+
     private void checkTimeSyncOrWarn(PhotonPipelineResult result) {
         if (result.metadata.timeSinceLastPong > 5L * 1000000L) {
+            String warningText =
+                    "PhotonVision coprocessor at path "
+                            + path
+                            + " is not connected to the TimeSyncServer? It's been "
+                            + String.format("%.2f", result.metadata.timeSinceLastPong / 1e6)
+                            + "s since the coprocessor last heard a pong.";
+
+            timesyncAlert.setText(warningText);
+            timesyncAlert.set(true);
+
             if (Timer.getFPGATimestamp() > (prevTimeSyncWarnTime + WARN_DEBOUNCE_SEC)) {
                 prevTimeSyncWarnTime = Timer.getFPGATimestamp();
 
                 DriverStation.reportWarning(
-                        "PhotonVision coprocessor at path "
-                                + path
-                                + " is not connected to the TimeSyncServer? It's been "
-                                + String.format("%.2f", result.metadata.timeSinceLastPong / 1e6)
-                                + "s since the coprocessor last heard a pong.\n\nCheck /photonvision/.timesync/{COPROCESSOR_HOSTNAME} for more information.",
+                        warningText
+                                + "\n\nCheck /photonvision/.timesync/{COPROCESSOR_HOSTNAME} for more information.",
                         false);
             }
         } else {
             // Got a valid packet, reset the last time
             prevTimeSyncWarnTime = 0;
+            timesyncAlert.set(false);
         }
     }
 
@@ -332,8 +453,13 @@ public class PhotonCamera implements AutoCloseable {
      * @return True if the camera is actively sending frame data, false otherwise.
      */
     public boolean isConnected() {
-        var curHeartbeat = heartbeatEntry.get();
+        var curHeartbeat = heartbeatSubscriber.get();
         var now = Timer.getFPGATimestamp();
+
+        if (curHeartbeat < 0) {
+            // we have never heard from the camera
+            return false;
+        }
 
         if (curHeartbeat != prevHeartbeatValue) {
             // New heartbeat value from the coprocessor
@@ -383,7 +509,7 @@ public class PhotonCamera implements AutoCloseable {
 
         // Heartbeat entry is assumed to always be present. If it's not present, we
         // assume that a camera with that name was never connected in the first place.
-        if (!heartbeatEntry.exists()) {
+        if (!heartbeatSubscriber.exists()) {
             var cameraNames = getTablesThatLookLikePhotonCameras();
             if (cameraNames.isEmpty()) {
                 DriverStation.reportError(
@@ -432,23 +558,30 @@ public class PhotonCamera implements AutoCloseable {
             // Error on a verified version mismatch
             // But stay silent otherwise
 
-            String bfw =
-                    "\n\n\n\n\n"
-                            + ">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n"
-                            + ">>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n"
-                            + ">>>                                          \n"
-                            + ">>> You are running an incompatible version  \n"
-                            + ">>> of PhotonVision on your coprocessor!     \n"
-                            + ">>>                                          \n"
-                            + ">>> This is neither tested nor supported.    \n"
-                            + ">>> You MUST update PhotonVision,            \n"
-                            + ">>> PhotonLib, or both.                      \n"
-                            + ">>>                                          \n"
-                            + ">>> Your code will now crash.                \n"
-                            + ">>> We hope your day gets better.            \n"
-                            + ">>>                                          \n"
-                            + ">>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n"
-                            + ">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n";
+            // spotless:off
+            String bfw = """
+
+
+
+
+
+                    >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+                    >>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                    >>>                                         \s
+                    >>> You are running an incompatible version \s
+                    >>> of PhotonVision on your coprocessor!    \s
+                    >>>                                         \s
+                    >>> This is neither tested nor supported.   \s
+                    >>> You MUST update PhotonVision,           \s
+                    >>> PhotonLib, or both.                     \s
+                    >>>                                         \s
+                    >>> Your code will now crash.               \s
+                    >>> We hope your day gets better.           \s
+                    >>>                                         \s
+                    >>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                    >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+                    """;
+            // spotless:on
 
             DriverStation.reportWarning(bfw, false);
             var versionMismatchMessage =
@@ -474,6 +607,6 @@ public class PhotonCamera implements AutoCloseable {
                         it -> {
                             return rootPhotonTable.getSubTable(it).getEntry("rawBytes").exists();
                         })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
